src/parser/test/esprima/invalid-syntax/migrated_0035.skip
TODO: we don't validate regexes
